# ECSEngine

./: .clang-format  CMakeLists.txt
include/: ComponentRegistry.hpp  ECSManager.hpp  EntityRegistry.hpp  EntitySparseSet.hpp  System.hpp  SystemRegistry.hpp
include/core/: ComponentArray.hpp  ComponentRegistry.hpp  Entity.hpp  EntityRegistry.hpp
src/: main.cpp  test_ecs_manager.cpp
